# libquat

./: Makefile.am  README.md  autogen.sh  configure.ac
examples/: Makefile  Matrix.cc  Matrix.hh  cube.cc  cube.hh  dodecahedron.cc  dodecahedron.hh  icosahedron.cc  octahedron.cc  plato.cc  plato.hh  tryglfw2.cc
examples/plato/: Makefile  Matrix.cc  cube.cc  dodec-list.txt  dodecahedron.cc  icosahedron.cc  icosahedron.hh  octahedron.hh  plato.cc  tetrahedron.cc  tetrahedron.hh
src/: Makefile.am  Quat.cc  Quat.hh  eigens.cc  quatcalc.cc  quattest.cc  rot.cc  runtest  testfan.cc
src/examples/fan/: Makefile  Makefile.testfan.~1~  testfan  testfan.cc  testfan.cc.~1~
test/: Makefile.am  test.cc  tests.h  tests.m4
test/libquat/: libquat.exp
test/quatcalc/: quatcalc.exp
